Add custom validator about unique email.